# discord-banner-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  rustfmt.toml  settings.template.toml
.github/workflows/: cicd.yml  pages.yml
assets/: imgur-album-response-0.json
commands/: banner.rs
docs/: index.html  style.css
src/: album_provider.rs  banner_changer.rs  banner_scheduler.rs  cli.rs  commands.rs  constants.rs  database.rs  error.rs  event_handler.rs  finding_media.rs  guild_id_ext.rs  interval.rs  lib.rs  main.rs  messages_with_media.rs  schedule.rs  schedule_runner.rs  setting_banner.rs  settings.rs  shutdown.rs  startup.rs  state.rs  user_data.rs  utils.rs
src/album_provider/: imgur_album.rs  mod.rs
src/commands/: banner.rs  help.rs  mod.rs  notifications.rs
src/database/: guild_schedule.rs  guild_settings.rs  mod.rs
