[package]
name = "discord-banner-bot"
version = "0.6.2"
edition = "2024"
authors = ["Andre Julius <noromoron@gmail.com>"]
repository = "https://github.com/NotNorom/discord-banner-bot"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = []

[profile.release]
debug = true

[dependencies]
async-repeater = { git = "https://github.com/NotNorom/async-repeater.git" }
base64 = "0.22.1"
# async-repeater = { path = "/home/norom/Documents/Code/async-repeater" }
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
fred = { version = "10.1.0", default-features = false, features = [
    "i-std",
    "i-sets",
    "i-hashes",
] }
poise = "0.6.1"
rand = "0.9.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = [
    "rt-multi-thread",
], default-features = false }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "tracing-log",
    "env-filter",
    "parking_lot",
] }
url = "2.5.4"

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
# poise = { path = "/home/norom/Documents/Code/poise" }
# serenity = { git = "https://github.com/serenity-rs/serenity" }
# serenity = { path = "/home/norom/Documents/Code/serenity" }

#[patch."https://github.com/serenity-rs/serenity.git"]
# serenity = { path = "/home/norom/Documents/Code/serenity" }

[patch."https://github.com/serenity-rs/serenity.git"]
serenity = { git = "https://github.com/serenity-rs//serenity", rev = "a60a332d2d34e6141720ee16869b68a06dac79b6"}