[package]
name = "discord-banner-bot"
version = "0.6.2"
edition = "2024"
authors = ["Andre Julius <noromoron@gmail.com>"]
license-file = "LICENSE"
description = "Discord bot for changing server banners on a customizable timer"
homepage = "https://github.com/NotNorom/discord-banner-bot"
repository = "https://github.com/NotNorom/discord-banner-bot"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = []

[profile.release]
debug = true

[dependencies]
async-repeater = "1.0.0"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
fred = { version = "10.1.0", default-features = false, features = [
    "i-std",
    "i-sets",
    "i-hashes",
] }
poise = "=0.6.1"
rand = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "native-tls-vendored",
    "stream",
] }
serde = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
], default-features = false }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "tracing-log",
    "env-filter",
    "parking_lot",
] }
url = "2.5.8"

[patch.crates-io]
# async-repeater = { git = "https://github.com/NotNorom/async-repeater.git" }
poise = { git = "https://github.com/serenity-rs/poise.git", rev = "b0915b695028f7525aa599148428aca8625416d4" } #, branch = "serenity-next" }
# poise = { path = "/home/norom/Documents/Code/poise" }
# serenity = { git = "https://github.com/serenity-rs/serenity" }
# serenity = { path = "/home/norom/Documents/Code/serenity" }

#[patch."https://github.com/serenity-rs/serenity.git"]
# serenity = { path = "/home/norom/Documents/Code/serenity" }

[patch."https://github.com/serenity-rs/serenity.git"]
serenity = { git = "https://github.com/serenity-rs//serenity", rev = "3c08f63f119679e2b6a3bb6f5c6af22d999111a0" }
